--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+<body>
+<h1>My name is Tim</h1>
+<p>I like play games and want to pass this course</p >
+<h2>HTML Image</h2>
+
+</body>
+
+  https://cn.bing.com/images/search?view=detailV2&ccid=eoQUwLgA&id=634B906059B04777DB7D6D480052FD2127026466&thid=OIP.eoQUwLgA7zC9VqHOuqUY4QHaG1&mediaurl=https%3a%2f%2fts1.cn.mm.bing.net%2fth%2fid%2fR-C.7a8414c0b800ef30bd56a1cebaa518e1%3frik%3dZmQCJyH9UgBIbQ%26riu%3dhttp%253a%252f%252fwww.guangyuanol.cn%252fuploads%252fallimg%252f220817%252f2330392420-3.jpg%26ehk%3d8Zqpk7HWLwBtMX%252fYzPKqUeZlt%252fqhBiUkCt61w%252bdP7Vo%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=539&expw=584&q=%e7%8c%aa%e7%8c%aa%e4%be%a0+%e8%a1%a8%e6%83%85&simid=608043227843489441&FORM=IRPRST&ck=8A41379D2C885D6A37124EE3F78F7521&selectedIndex=190&ajaxhist=0&ajaxserp=0
+</html>
