--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-
 <!DOCTYPE html>
 <html>
+
 <body>
-<h1>My name is Tim</h1>
-<p>I like play games and want to pass this course</p >
-<h2>HTML Image</h2>
+
+<h1>Hello,my name is Tim and I am glad to meet you</h1>
+< img   src="https://github.com/caibingxuan/ICT523/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230308102902.jpg" width="200" height=250">
+< img   src="jjbao.jpg=2">                                                                           
+<p>I am interested in playing games.my expectation is opening my field vision to the class</p >
 
 </body>
-
-  微信图片_20230308102902.jpg
 </html>
