--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1>Hello,my name is Tim and I am glad to meet you</h1>
-< img   src="https://github.com/caibingxuan/ICT523/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230308102902.jpg" width="200" height=250">
+< img   src="微信图片_20230308102902.jpg" width="200" height=250">
 < img   src="jjbao.jpg=2">                                                                           
 <p>I am interested in playing games.my expectation is opening my field vision to the class</p >
 
