--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <body>
 
 <h1>Hello,my name is Tim and I am glad to meet you</h1>
-< img   src="微信图片_20230308102902.jpg" width="200" height=250">
-< img   src="jjbao.jpg=2">                                                                           
+< img   src="https://github.com/caibingxuan/ICT523/blob/main/875689eefad517c22b98274e6d9afa0.jpg" width="200" height=250">
+< img   src="https://github.com/caibingxuan/ICT523/blob/main/875689eefad517c22b98274e6d9afa0.jpg">                                                                           
 <p>I am interested in playing games.my expectation is opening my field vision to the class</p >
 
 </body>
