--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
 
-<body>
-
-<h1>Hello,my name is Tim and I am glad to meet you</h1>
-< img   src="4f1bc2aca1e46e427689af0edb5df74.jpg" width="200" height=250">
-< img   src="4f1bc2aca1e46e427689af0edb5df74.jpg">                                                                           
-<p>I am interested in playing games.my expectation is opening my field vision to the class</p >
-
-</body>
-</html>
+<!DOCTYPE html> 
+ <html> 
+ <head> 
+ <title>Page Title</title> 
+ </head> 
+ <body> 
+   <h1>This is a Heading</h1> 
+ <p> I am Tim </p > 
+ < img src="4f1bc2aca1e46e427689af0edb5df74.jpg" alt="Girl in a jacket"> 
+ </body> 
+ </html> 
