--- a/third.html
+++ b/third.html
@@ -1,8 +1,32 @@
-<!DOCTYPE html>  
- <html>  
- <body>  
- < img src="696d1a8207a644dc37c959b75af9cb6.jpg">  
- <h1>Through this survey, we found that 60 percent of people like skin care products with natural ingredients, so the company's production of such skin care products has been increased。</h1>  
- <h2>We find that most people like to shop online, and we think companies should optimize their websites, add shopping cart options, and launch promotional activities from time to time to attract people's interest in shopping.<h2>  
- </body>  
- </html>  
+<!DOCTYPE html>
+<html>
+<head> 
+<meta charset="utf-8"> 
+<title>W3Cschool教程(w3cschool.cn)</title> 
+</head>
+<body>
+
+<p>
+photo1:
+<img src="https://i.postimg.cc/dVK52Gtm/20230309091058.png"></p>
+
+<p>
+photo2:
+<img src="https://i.postimg.cc/bvyLM8nZ/20230309091025.png"></p>
+
+<p>
+
+<p></p>
+</body>
+</html>
+<!DOCTYPE html> 
+ <html> 
+ <body> 
+
+ <h1>Survey Result</h1> 
+ </p > The survey subjects are all employees who have worked in the company for a long time and have a basic understanding of the company. They believe that increasing sales, establishing brand awareness, developing new products and expanding product range are the current goals of the company. They also hope that the company will become better and better by enhancing and improving the website and implementing online sales platform.</p > 
+
+<p></p>
+</body>
+</html>
+
