--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 
 <!DOCTYPE html> 
  <html> 
- <head> 
- <title>Page Title</title> 
- </head> 
  <body> 
-   <h1>This is a Heading</h1> 
- <p> I am Tim </p > 
- < img src="4f1bc2aca1e46e427689af0edb5df74.jpg" alt="Girl in a jacket"> 
- </body> 
- </html> 
+
+ <h1>My First Heading</h1> 
+ <p>My first paragraph.</p > 
+ </p > I am Tim, from 21 IT 1.</p > 
+<!DOCTYPE html>
+<html>
+<head> 
+<meta charset="utf-8"> 
+<title>W3Cschool教程(w3cschool.cn)</title> 
+</head>
+<body>
+
+<p>
+photo1:
+<img src=""></p>
+
+<p>
+photo2:
+<img src=""></p>
+
+<p>
+
+<p></p>
+</body>
+</html>
