--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p>
 photo1:
-<img src=""></p>
+<img src="https://user-images.githubusercontent.com/127078985/282993390-401cb699-ae77-4b31-9114-de90e84c2e10.jpg"></p>
 
 <p>
 photo2:
