--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ photo1:
 
 <p>
 photo2:
-<img src=""></p>
+<img src="https://user-images.githubusercontent.com/127078985/282995090-f28c96f1-bb5d-4024-8e14-b81f739c715d.jpg"></p>
 
 <p>
 
