--- a/second.html
+++ b/second.html
@@ -1,8 +1,43 @@
-<!DOCTYPE html> 
- <html> 
- < img src="7750096ff68789f33ef9c473eb479c0.png"> 
- <body> 
-   <h1>Design the survey questions</h1> 
- <p>Surveys are used as a method of gathering data in many different fields. They are a good choice when you want to find out about the characteristics, preferences, opinions, or beliefs of a group of people.Through the questionnaire, the company can understand customers' hobbies and trends, so that the company can develop the products that customers like according to their preferences and achieve the purpose of increasing marketing,</p > 
- </body> 
- </html> 
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title></title>
+ </head>
+ <body>
+  <form action="" method="">
+   <input type="text" name="1" id="1" value="Identify the subjects to be Interviewed and design aquestionnaire" style="width: 400px; height: 100px; word-break: break-all;"/>
+   <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Distribute the questionnaire" style="width: 200px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Recall the questionnaire" style="width: 200px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Filter obtained results using the cross-tabulation technique" style="width: 350px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Analyze the data and evaluate the results obtained" style="width: 350px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Conclude whether improvements To the existing situation are needed" style="width: 410px; height: 100px; word-break: break-all;"/>
+  </form>
+ </body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>W3Cschool教程(w3cschool.cn)</title>
+</head>
+
+<body>
+
+<h1>meaning</h1>
+
+<p>
+   he questionnaire is a way for various industries in society to collect relevant information, and can be integrated and analyzed according to the collected information to obtain answers to questions, which helps investigators further analyze, process and improve relevant matters and formulate effective decisions and strategies. <br/>
+    It can discover the relevant situation of the situation, and through the collection of a large amount of data, it can accumulate the understanding of the designated target population on the current situation and relevant opinions and suggestions, so as to effectively provide the reference basis for the corresponding affairs management for the investigator, so that it can have a basis in formulating long-term strategic planning.<br/>
+</p>
+
+
+</body>
+
+</html>
